--- a/src/app/scss/_footer.scss
+++ b/src/app/scss/_footer.scss
@@ -1,9 +1,9 @@
-$footerBackground:#F5f5f5;
-.footerMenu {
+$footer-background:#F5f5f5;
+.footer-menu {
 width: 100%;
 height: 50px;
 display: block;
-background-color: $footerBackground;
+background-color: $footer-background;
 z-index: 90;
 position: fixed;
 bottom: -1px;
@@ -13,7 +13,7 @@ border-top: 1px solid #bcbac1;
     float: left;
     margin: auto;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-      .mytransaction {
+      .my-transaction {
         display: block;
         height: 30px;
         width: 100%;
@@ -32,7 +32,7 @@ border-top: 1px solid #bcbac1;
             background-size: 25px;
           } 
       }
-      .basicp {
+      .basic-procedure {
         display: block;
         height: 30px;
         width: 100%;
@@ -51,7 +51,7 @@ border-top: 1px solid #bcbac1;
             background-size: 33px;
           }
       }
-      .closeday {
+      .close-day {
         display: block;
         height: 30px;
         width: 100%;
