settings code standard update

--- a/src/app/app/settings/components/settings.component.html
+++ b/src/app/app/settings/components/settings.component.html
@@ -1,15 +1,15 @@
 <div class="setting">
-    <div class="containerBody">
+    <div class="container-body">
         <div class="button">
-            <div class="buttonIdentifier green">Reset Password</div>
+            <div class="button-identifier green">Reset Password</div>
         </div>
          <div class="separator"></div>
         <div class="button">
-            <div class="buttonIdentifier green">Sync</div>
+            <div class="button-identifier green">Sync</div>
         </div>
          <div class="separator"></div>
          <div class="button">
-       	 	<div class="buttonIdentifier green" (click)="logout()">Log Out</div>
+       	 	<div class="button-identifier green" (click)="logout()">Log Out</div>
         </div>
     </div>
 </div>
