fix Convention Name

--- a/src/app/app/shared/components/modal.component.html
+++ b/src/app/app/shared/components/modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-outer-box" *ngIf='getMainModalStatus()'>
         <div class="modal-internal">
                 <info-modal *ngIf='getModalStatus().info'></info-modal>
-                <verificationcode-modal *ngIf='getModalStatus().verificationcode'></verificationcode-modal>
+                <verification-code-modal *ngIf='getModalStatus().verificationCode'></verification-code-modal>
         </div>
 </div>
