--- a/src/app/app/shared/components/footer-menu.component.html
+++ b/src/app/app/shared/components/footer-menu.component.html
@@ -1,20 +1,20 @@
  <div class="footer-menu" *ngIf="getLayout().appFooter">
     <div class="column" (click)="gotoMyTransaction()">
-      <div class="my-transaction" [ngClass]="{ active : getFooterState().mytransaction}"></div>
-      <div class="text"[ngClass]="{ active : getFooterState().mytransaction}">My Transaction</div>
+      <div class="my-transaction" [ngClass]="{ active : getFooterState().myTransaction}"></div>
+      <div class="text"[ngClass]="{ active : getFooterState().myTransaction}">My Transaction</div>
    </div>
  
-   <div class="column" (click)="gotoBasicCallProcedure()">
-      <div class="basic-procedure" [ngClass]="{ active : getFooterState().basicp}"></div>
-      <div class="text" [ngClass]="{ active : getFooterState().basicp}">Basic Procedure</div>
+   <div class="column" (click)="goToBasicCallProcedure()">
+      <div class="basic-procedure" [ngClass]="{ active : getFooterState().basicCallProcedure}"></div>
+      <div class="text" [ngClass]="{ active : getFooterState().basicCallProcedure}">Basic Procedure</div>
    </div>
  
-   <div class="column" (click)="gotoCloseDay()">
-      <div class="close-day" [ngClass]="{ active : getFooterState().closeday}"></div>
-      <div class="text" [ngClass]="{ active : getFooterState().closeday}">Close Day</div> 
+   <div class="column" (click)="goToCloseDay()">
+      <div class="close-day" [ngClass]="{ active : getFooterState().closeDay}"></div>
+      <div class="text" [ngClass]="{ active : getFooterState().closeDay}">Close Day</div> 
    </div>
  
-   <div class="column" (click)="gotoSettings()">
+   <div class="column" (click)="goToSettings()">
       <div class="settings" [ngClass]="{ active : getFooterState().settings}"></div>
       <div class="text" [ngClass]="{ active : getFooterState().settings}">Settings</div>
    </div>
