--- a/src/app/app/shared/components/main-page.component.html
+++ b/src/app/app/shared/components/main-page.component.html
@@ -1,12 +1,13 @@
-<div id="homeBodyLarge" class="mainPageContainerBody" [ngClass]="{small : !getResize().largeUp}">
-    <div class="mainPageContainerLarge" [ngClass]="{small : !getResize().largeUp}">
+<div id="home-body-large" class="main-page-container-body" [ngClass]="{small : !getResize().largeUp}">
+    <div class="main-page-container-large" [ngClass]="{small : !getResize().largeUp}">
         <div class="container2" [ngClass]="{small : !getResize().largeUp}">
             <div class="container1" [ngClass]="{small : !getResize().largeUp}">
                 <smart-left-menu *ngIf="getResize().largeUp"></smart-left-menu>
-                <div class="componentContainer" [ngClass]="{small : !getResize().largeUp}">
+                <div class="component-container" [ngClass]="{small : !getResize().largeUp}">
                     <router-outlet></router-outlet>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<!-- belum dipake ??? -->
