update settings button functionality

--- a/src/app/app/settings/components/reset-password.component.html
+++ b/src/app/app/settings/components/reset-password.component.html
@@ -1,5 +1,17 @@
 <div class="reset-password">
     <div class="container-body">
-        RESET
+        <div class="inner-box">
+			<div class="login-separator"></div>
+			<div class="message">DISTRIBUTOR CODE</div>
+			<div><input/></div>
+			<div class="message">TAX IDENTIFICATION NUMBER</div>
+			<div><input/></div>
+			<div class="login-separator"></div>
+			<br/>
+<!-- 			<a (click)="gotoLogin()"> -->		
+			<a (click)="toggleVerificationCodeModal()">
+				<div class="login-button">SEND PASSWORD</div>
+			</a>
+		</div>
     </div>
 </div>
