--- a/src/app/app/basic-call-procedure/components/sales-order-payment.component.html
+++ b/src/app/app/basic-call-procedure/components/sales-order-payment.component.html
@@ -1,4 +1,4 @@
-<div class = "retailer-sales-order">
+<div class = "sales-order-payment">
 	<div class = "container-body">
 		<div class="item-container">
             <div class="item-title">Gloria Cell</div>
@@ -17,11 +17,10 @@
 				<div class="button-identifier">SKIP</div>
 			</div>		
 		</div>
-		<div class="divider">
+		<!-- <div class="divider">
 			<div class= "button" >
 				<div class="button-identifier" (click)="goToSalesOrderPayment()">CONFIRM</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 </div>
-
