--- a/src/app/app/basic-call-procedure/components/sales-order-payment.component.html
+++ b/src/app/app/basic-call-procedure/components/sales-order-payment.component.html
@@ -17,10 +17,10 @@
 				<div class="button-identifier">SKIP</div>
 			</div>		
 		</div>
-		<!-- <div class="divider">
+		<div class="divider">
 			<div class= "button" >
-				<div class="button-identifier" (click)="goToSalesOrderPayment()">CONFIRM</div>
+				<div class="button-identifier">CONFIRM</div>
 			</div>
-		</div> -->
+		</div>
 	</div>
 </div>
