--- a/src/app/app/settings/components/reset-password.component.html
+++ b/src/app/app/settings/components/reset-password.component.html
@@ -2,15 +2,16 @@
     <div class="container-body">
         <div class="inner-box">
 			<div class="login-separator"></div>
-			<div class="message">DISTRIBUTOR CODE</div>
+			<div class="message">Old Password</div>
 			<div><input/></div>
-			<div class="message">TAX IDENTIFICATION NUMBER</div>
+			<div class="message">New Password</div>
+			<div><input/></div>
+			<div class="message">Confirm New Password</div>
 			<div><input/></div>
 			<div class="login-separator"></div>
-			<br/>
-<!-- 			<a (click)="gotoLogin()"> -->		
+			<br/>		
 			<a (click)="toggleVerificationCodeModal()">
-				<div class="login-button">SEND PASSWORD</div>
+				<div class="login-button">UPDATE</div>
 			</a>
 		</div>
     </div>
