--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -1,5 +1,84 @@
-<div class="targetsActuals">
-	<div class="submenuDay active"><div class="text">Day</div></div>
-	<div class="submenuWeek"><div class="text">Week</div></div>
-	<div class="submenuMonth"><div class="text">Month</div></div>
+<div class="targets-actuals">
+
+<a (click)="showMenuDay()"><div class="sub-menu-day" [ngClass] = "{active: vUnderlineDay}"><div class="text">Day</div></div></a>
+<a (click)="showMenuWeek()"><div class="sub-menu-week" [ngClass] = "{active: vUnderlineWeek}"><div class="text">Week</div></div></a>
+<a (click)="showMenuMonth()"><div class="sub-menu-month" [ngClass] = "{active: vUnderlineMonth}"><div class="text">Month</div></div></a>
+<!--Container-->
+<div class="container-body">
+	<div *ngIf="vDayShow" >
+		<div class="item-container">
+			<div class="item-title">Broadband</div>
+				<div class="item-left">SIM</div>
+				<div class="item-mid">23.33%</div>
+				<div class="item-right">
+					25/150
+					<div class="targetText">Actual/Target</div>
+					<div class="balance">Balance : <div class="balace-number">200</div> </div>
+				</div>
+		</div>
+		<div class="divider"></div>
+		<div class="item-container">
+				<div class="item-left">SIM</div>
+				<div class="item-mid">23.33%</div>
+				<div class="item-right">
+					25/150
+					<div class="target-text">Actual/Target</div>
+					<div class="balance">Balance : <div class="balace-number">200</div> </div>
+				</div>
+		</div>
+		<div class="item-container">
+			<div class="item-title">Broadband</div>
+				<div class="item-left">SIM</div>
+				<div class="item-mid">23.33%</div>
+				<div class="item-right">
+					25/150
+					<div class="target-text">Actual/Target</div>
+					<div class="balance">Balance : <div class="balace-number">200</div> </div>
+				</div>
+		</div>
+		<div class="item-container">
+			<div class="item-title">SIM</div>
+				<div class="item-left">SmartSIM</div>
+				<div class="item-mid">23.33%</div>
+				<div class="item-right">
+					25/150
+					<div class="target-text">Actual/Target</div>
+					<div class="balance">Balance : <div class="balace-number">200</div> </div>
+			</div>
+		</div>
+	</div>
+
+	<div *ngIf="vWeekShow">
+		<div class="item-container">
+			<div class="item-title">Airtime2</div>
+			<div class="item-body">
+				<div class="item-left">Submenu</div>
+				<div class="item-mid">50%</div>
+				<div class="item-right">
+					25/150
+					<div class="target-text">Actual/Target</div>
+					<div class="balance">Balance : <div class="balace-number">200</div> </div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div *ngIf="vMonthShow">
+		<div class="item-container">
+			<div class="item-title">Airtime3</div>
+			<div class="item-body">
+				<div class="item-left">Submenu</div>
+				<div class="item-mid">89%</div>
+				<div class="item-right">
+					25/150
+					<div class="target-text">Actual/Target</div>
+					<div class="balance">Balance : <div class="balace-number">200</div> </div>
+				</div>
+			</div>
+		</div> 
+	</div>
+</div>
+
+<!--End of Container-->
+
 </div>
