--- a/src/app/scss/_targets-actuals.scss
+++ b/src/app/scss/_targets-actuals.scss
@@ -1,9 +1,9 @@
-.targetsActuals {
+.targets-actuals {
     //padding-bottom: 45px;
     z-index: 1;
     height: 100%;
     width: 100%;
-    .submenuDay
+    .sub-menu-day
     {
     	display: block;
 	    width: 34%;
@@ -14,7 +14,7 @@
 	    margin-right: -1%;
 	    float: left;
 	    &.active{
-		    border-bottom: 3px solid $red;
+		    border-bottom: 2px solid $red;
 	    	margin-left: 0;
 	    }
 	    .text
@@ -25,7 +25,7 @@
 
 	    }
 	}
-	.submenuWeek
+	.sub-menu-week
     {
     	display: block;
 	    width: 35%;
@@ -37,8 +37,8 @@
 	    margin-left: -1%;
 	    float: left;
 	    &.active{
-		    border-bottom: 3px solid $red;
-	    	margin-left: 0;
+		    border-bottom: 2px solid $red;
+	    	margin-left: -1%;
 	    }
 	    .text
 	    {
@@ -48,7 +48,7 @@
 
 	   }
 	}
-	.submenuMonth
+	.sub-menu-month
     {
     	display: block;
 	    width: 34%;
@@ -59,8 +59,8 @@
 	    margin-right: -1%;
 	    float: left;
 	    &.active{
-		    border-bottom: 3px solid $red;
-	    	margin-left: 0;
+		    border-bottom: 2px solid $red;
+	    	margin-left: 0px;
 	    }
 	    .text
 	    {
@@ -70,5 +70,64 @@
 
 	    }    
 
+    }
+    .container-body {
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    .item-container {
+    display: inline-block;
+    width: 100%;
+    padding-bottom: 10px;
+        .item-title{   
+            font-size: 20px;
+            background-color: #DCE6F2;
+            padding-left: 10px;
+            }
+        .item-left{
+            display: block;
+            width: 30%;
+            font-size: 18px;
+            float: left;
+            text-align: left;
+            padding-left: 10px;
+        }
+        .item-mid{
+            display: block;
+            width: 34%;
+            font-size: 18px;
+            float: left;
+            text-align: center;
+        }
+        .item-right{
+            display: block;
+            width: 30%;
+            font-size: 18px;
+            float: left;
+            text-align: right;
+            .target-text{
+                    font-size: 12px;
+                    color: $textgrey;
+                    clear: left;
+                    text-align: right;
+                   }
+                .balance{
+                    font-size: 12px;
+                    color: $textgrey;
+                    clear: right;
+                    text-align: right;
+                   }
+                .balace-number{
+                    font-size: 12px;
+                    color:#000;
+                    text-align: right;
+                    float: right;
+                   }
+            }
+        }
+        .divider
+        {
+            border: 1px solid #BFBFBF;
+        }
     }
 }
