--- a/src/app/scss/_detail-retailer.scss
+++ b/src/app/scss/_detail-retailer.scss
@@ -21,7 +21,7 @@
             .text {
                 display: inline-block;
                 background-color: #000;
-                width: calc(100% - 20px);
+                width: 100%;
                 padding: 10px;
                 height: 37px;
                 .header-text {
@@ -37,9 +37,7 @@
         }
         .item-container {
             display: inline-block;
-            width: calc(100% - 20px);
-            padding-left: 10px;
-            padding-right: 10px;
+            width: 100%;
             border-bottom: 1px solid #BFBFBF;
             cursor: pointer;
             .item-title{
@@ -60,6 +58,8 @@
                     background-position-x: center;
                     background-position-y: 7px;
                     background-size: 20px;
+                    padding-right: 10px;
+                    padding-bottom: 10px;
                 }
                 &.selected
                 {
@@ -71,6 +71,8 @@
                     background-position-x: center;
                     background-position-y: 7px;
                     background-size: 20px;
+                    padding-right: 10px;
+                    padding-bottom: 10px;
                 }
             }
             .item-identifier {
@@ -78,6 +80,7 @@
                 font-size: 18px;
                 margin-right: 10px;
                 margin-top: 10px;
+                padding-left: 10px;
                 &.single-line {
                     width: 125px;
                     float: left;
@@ -93,6 +96,7 @@
                 margin-bottom: 10px;
                 padding-top:5px;
                 float: left;
+                padding-left: 10px;
                 &.red {
                     color: red;
                 }
@@ -121,7 +125,7 @@
 
         .item-sub-container {
             display: inline-block;
-            width: calc(100% - 20px);
+            width: 100%;
             padding-left: 10px;
             padding-right: 20px;
             border-bottom: 1px solid #BFBFBF;
@@ -171,6 +175,7 @@
                 margin-bottom: 10px;
                 padding-top:5px;
                 float: left;
+                padding-left: 10px;
                 &.red {
                     color: red;
                 }
