updated target and actuals page

--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -12,7 +12,7 @@
 				<div class="item-mid">23.33%</div>
 				<div class="item-right">
 					25/150
-					<div class="targetText">Actual/Target</div>
+					<div class="target-text">Actual/Target</div>
 					<div class="balance">Balance : <div class="balace-number">200</div> </div>
 				</div>
 		</div>
