--- a/src/app/app/shared/components/header.component.html
+++ b/src/app/app/shared/components/header.component.html
@@ -3,10 +3,7 @@
         <div class="default-box">
             <div class="back" *ngIf="getHeaderLayout().back" (click)="goToPreviousPage()"></div>
             <div class="title">{{getTitle()}}</div>
-              <!--<div class="refresh"></div>
-            <div class="magnifier"></div>
-            <div class="up-arrow"></div>
-            <div class="logo"></div>-->
+            <div class="filter" *ngIf="getHeaderLayout().filter"></div>
         </div>
     </div>
 </div>
