--- a/src/app/scss/_targets-actuals.scss
+++ b/src/app/scss/_targets-actuals.scss
@@ -1,3 +1,6 @@
+$select-arrow: 'data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiA/PjxzdmcgaGVpZ2h0PSI0OCIgdmlld0JveD0iMCAwIDQ4IDQ4IiB3aWR0aD0iNDgiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZD0iTTE0LjgzIDE2LjQybDkuMTcgOS4xNyA5LjE3LTkuMTcgMi44MyAyLjgzLTEyIDEyLTEyLTEyeiIvPjxwYXRoIGQ9Ik0wLS43NWg0OHY0OGgtNDh6IiBmaWxsPSJub25lIi8+PC9zdmc+';
+$select-padding: 0;
+
 .targets-actuals {
     //padding-bottom: 45px;
     z-index: 1;
@@ -121,6 +124,47 @@
                     text-align: right;
                     float: right;
                    }
+            }
+        }
+        .filter-container{
+                background-color: #F2F2F2;
+                width: 100%;
+                display: block;
+                clear: left;
+                height: 60px;
+            .filter-label
+            {
+               font-size: 17px;
+                color: #000;
+                padding-top: 20px;
+                padding-left: 10px;
+                float: left;
+            }
+            .filter-dropdown
+            {
+                padding-top: 15px;
+                padding-left: 70px;
+                select {
+                background: #fff;
+                height: 31px;
+                border: 1px solid #A6A6A6;
+                width: 90%;
+                -webkit-appearance: none;
+                border-radius: 7px;
+                padding-left: 15px;
+                font-size: 14px;
+                appearance: none;
+                  @media screen and (-webkit-min-device-pixel-ratio: 0) {
+                    background-image: url(#{$select-arrow});
+                    background-position: right 0 top 50%;
+                    background-repeat: no-repeat;
+                  }
+                }
+                select option{
+                    background: #fff;               
+                    width: 90%;
+                    font-size: 14px;
+                }
             }
         }
         .divider
