Create new Global CSS and Global CSS Parameter for all HTML.

--- a/src/app/app/basic-call-procedure/components/basic-call-procedure.component.html
+++ b/src/app/app/basic-call-procedure/components/basic-call-procedure.component.html
@@ -1,9 +1,18 @@
-<div class="basic-call-procedure-container">
-	<div class="container-body">
-        <div class="item-container" >
-        	<div class="item-identifier">Gloria Cell</div>
-        	<div class="item-value">Retailer mobile number</div>
-        	 <a (click)="gotoDetailRetailer()"><div class="item-icon open-sub-item"></div></a>      	
-        </div>
-	</div>
+<div class="container-body">
+    <div class="item-container">
+    	<div class="item-title left">Today's Route</div>
+    </div>
+    <div class="item-container">
+    	<div class="item-identifier">Gloria Cell</div>
+    	<div class="tbs">
+    		<div>Retailer Mobile Number</div>
+    	 	<div>+621235872125</div>
+    	 	<div>Retailer Mobile Number 2</div>
+    	 	<div>+621235872125</div>
+    	</div>
+    </div>
+    <div class="item-container">
+    	<div class="item-identifier">Mobile Number</div>
+    	 <a (click)="gotoDetailRetailer()"><div class="item-icon arrow-right"></div></a>      	
+    </div>
 </div>
