--- a/src/app/app/basic-call-procedure/components/retailer-sales-order.component.html
+++ b/src/app/app/basic-call-procedure/components/retailer-sales-order.component.html
@@ -1,27 +1,25 @@
-<div class = "retailer-sales-order">
-	<div class = "container-body">
-		<div class="item-container">
-            <div class="item-title">Gloria Cell</div>
-        </div>
-        <div class="item-container">
-            <div class="item-contain-center">Total Amount:</div>
-        </div>
-        <div class="item-container">
-            <div class="item-contain-left">Transfer Load</div>
-        </div>
-        <div class="item-container">
-            <div class="item-contain-left">Physical Order</div>
-        </div>
-		<div class="divider">
-			<div class= "button" >
-				<div class="button-identifier">SKIP</div>
-			</div>		
-		</div>
-		<div class="divider">
-			<div class= "button" >
-				<div class="button-identifier" (click)="goToSalesOrderPayment()">CONFIRM</div>
-			</div>
+<div class = "container-body">
+	<div class="item-container">
+        <div class="item-title left">Gloria Cell</div>
+        <div class="item-value green">Order No. 12345678</div>
+    </div> 	
+    <div class="item-container">
+        <div class="item-center-identifier">Total Amount:</div>
+    </div>
+    <div class="item-container">
+        <div class="item-left-identifier">Transfer Load</div>
+    </div>
+    <div class="item-container">
+        <div class="item-left-identifier">Physical Order</div>
+    </div>
+	<div class="double-divider">
+		<div class= "button" >
+			<div class="button-identifier">SKIP</div>
+		</div>		
+	</div>
+	<div class="double-divider">
+		<div class= "button" >
+			<div class="button-identifier" (click)="goToSalesOrderPayment()">CONFIRM</div>
 		</div>
 	</div>
 </div>
-
