--- a/src/app/app/my-transaction/components/my-transaction.component.html
+++ b/src/app/app/my-transaction/components/my-transaction.component.html
@@ -1,23 +1,23 @@
-<div class="my-transaction">
+<div class="sub-main-menu">
     <div class="container-body">
-        <div class="button">
-            <div class="button-identifier green" (click)="goToTargetsActuals()">Targets &amp; Actuals</div>
+        <div class="sub-main-button">
+            <div class="button-identifier" (click)="goToTargetsActuals()">Targets &amp; Actuals</div>
         </div>
          <div class="separator"></div>
-         <div class="button">
-            <div class="button-identifier green" (click)="goToInventory()">Inventory</div>
+         <div class="sub-main-button">
+            <div class="button-identifier" (click)="goToInventory()">Inventory</div>
         </div>
          <div class="separator"></div>
-          <div class="button">
-            <div class="button-identifier green" (click)="goToRetailerRoute()">Retailer Route</div>
+          <div class="sub-main-button">
+            <div class="button-identifier" (click)="goToRetailerRoute()">Retailer Route</div>
         </div>
          <div class="separator"></div>
-          <div class="button">
-            <div class="button-identifier green" (click)="goToAccountsReceivables()">Accounts Receivables</div>
+          <div class="sub-main-button">
+            <div class="button-identifier" (click)="goToAccountsReceivables()">Accounts Receivables</div>
         </div>
          <div class="separator"></div>
-         <div class="button">
-            <div class="button-identifier green" (click)="goToDSPAlerts()">DSP Alerts</div>
+         <div class="sub-main-button">
+            <div class="button-identifier" (click)="goToDSPAlerts()">DSP Alerts</div>
         </div>
     </div>
 </div>
