--- a/src/app/app/settings/components/settings.component.html
+++ b/src/app/app/settings/components/settings.component.html
@@ -1,17 +1,17 @@
-<div class="setting">
+<div class="sub-main-menu">
     <div class="container-body">
-        <div class="button">
-            <div class="button-identifier green" (click)="goToResetPassword()">Reset Password</div>
+        <div class="sub-main-button">
+            <div class="button-identifier" (click)="goToResetPassword()">Reset Password</div>
         </div>
          <div class="separator"></div>
-         <div class="button">
+         <div class="sub-main-button">
             <a (click)="toggleVerificationCodeModal()">
-                <div class="button-identifier green" (click)="sync()">Sync</div>
+                <div class="button-identifier" (click)="sync()">Sync</div>
             </a>
         </div>
          <div class="separator"></div>
-         <div class="button">
-       	 	<div class="button-identifier green" (click)="logout()">Log Out</div>
+         <div class="sub-main-button">
+       	 	<div class="button-identifier" (click)="logout()">Log Out</div>
         </div>
     </div>
 </div>
