--- a/src/app/scss/_footer.scss
+++ b/src/app/scss/_footer.scss
@@ -1,4 +1,3 @@
-$footer-background:#F5f5f5;
 .footer-menu {
 width: 100%;
 height: 50px;
@@ -91,13 +90,13 @@ border-top: 1px solid #bcbac1;
       }
   }
   .text {
-      font-size: 11px;
-      color: #808080;
+      font-size: $footer-normal;
+      color: $grey;
       text-align: center;
       margin-bottom: 1px;
       padding-top: 2px;
       &.active {
-        color: #007879;
+        color: $deep-cyan;
      }
   }
 }
