--- a/src/app/scss/_targets-actuals.scss
+++ b/src/app/scss/_targets-actuals.scss
@@ -84,7 +84,7 @@ $menu-underline : #ED135B;
         .item-title{   
             font-size: 20px;
             background-color: #DCE6F2;
-            padding-left: 10px;
+            padding-left: 2%;
             }
         .item-left{
             display: block;
@@ -92,7 +92,7 @@ $menu-underline : #ED135B;
             font-size: 18px;
             float: left;
             text-align: left;
-            padding-left: 10px;
+            padding-left: 2%;
             padding-top: 1%;
         }
         .item-mid{
@@ -105,7 +105,7 @@ $menu-underline : #ED135B;
         }
         .item-right{
             display: block;
-            width: 30%;
+            width: 32%;
             font-size: 18px;
             float: left;
             text-align: right;
@@ -138,7 +138,7 @@ $menu-underline : #ED135B;
                 height: 60px;
             .filter-label
             {
-               font-size: 17px;
+               font-size: 18px;
                 color: #000;
                 padding-top: 20px;
                 padding-left: 10px;
