--- a/src/app/scss/_targets-actuals.scss
+++ b/src/app/scss/_targets-actuals.scss
@@ -73,15 +73,15 @@ $menu-underline : #ED135B;
 	    	font-size: 15px;
         }    
     }
-    .container-body {
+    .container-body-ta {
     background-color: white;
     width: 100%;
     height: 100%;
-    .item-container {
+    .item-container-ta {
     display: inline-block;
     width: 100%;
     padding-bottom: 10px;
-        .item-title{   
+        .item-title-ta{   
             font-size: 20px;
             background-color: #DCE6F2;
             padding-left: 2%;
