updated targets actual css

--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -1,8 +1,8 @@
 <div class="targets-actuals">
 
-<a (click)="showMenuDay()"><div class="sub-menu-day" [ngClass] = "{active: vUnderlineDay}"><div class="text">Day</div></div></a>
-<a (click)="showMenuWeek()"><div class="sub-menu-week" [ngClass] = "{active: vUnderlineWeek}"><div class="text">Week</div></div></a>
-<a (click)="showMenuMonth()"><div class="sub-menu-month" [ngClass] = "{active: vUnderlineMonth}"><div class="text">Month</div></div></a>
+<a (click)="showMenuDay()"><div class="sub-menu-day" [ngClass] = "{active: vUnderlineDay}"><div class="text" [ngClass] = "{active: vUnderlineDay}">Day</div></div></a>
+<a (click)="showMenuWeek()"><div class="sub-menu-week" [ngClass] = "{active: vUnderlineWeek}"><div class="text" [ngClass] = "{active: vUnderlineWeek}">Week</div></div></a>
+<a (click)="showMenuMonth()"><div class="sub-menu-month" [ngClass] = "{active: vUnderlineMonth}"><div class="text" [ngClass] = "{active: vUnderlineMonth}">Month</div></div></a>
 <!--Container-->
 <div class="container-body-ta">
 	
