--- a/src/app/scss/_global-parameter.scss
+++ b/src/app/scss/_global-parameter.scss
@@ -19,6 +19,11 @@ $border-line : #BFBFBF;
 //header
 $deep-cyan : #007879;
 
+//
+$light-grayish-blue : #DCE6F2;
+$menu-underline : #ED135B;
+
+$inactive-tab-grey : #D9D9D9;
 
 // .html { font-size: 200%; } 
 //header
