--- a/src/app/app/login/components/login.component.html
+++ b/src/app/app/login/components/login.component.html
@@ -3,10 +3,10 @@
 		<div class="header">DSP Mobile App</div>
 		<div class="inner-box">
 			<div class="login-separator"></div>
-			<div class="error-alert">{{getErrorMessageText()}}</div>
-			<div><input placeholder="Username" [(ngModel)]="vUsername"/></div>
-			<div><input placeholder="Password" type="password" [(ngModel)]="vPassword"/></div>
-			<a (click)="login($event)"><div class="login-button">SIGN IN</div></a>
+			<div class="error-alert" id="error-alert">{{getErrorMessageText()}}</div>
+			<div><input placeholder="Username" [(ngModel)]="vUsername" id="username"/></div>
+			<div><input placeholder="Password" type="password" [(ngModel)]="vPassword" id="password"/></div>
+			<a (click)="login($event)"><div class="login-button" id="login-button">SIGN IN</div></a>
 			<p><a (click)="gotoForgetPassword()">Forgot your password?</a></p>
 		</div>
 	</div>
