--- a/src/app/app/my-transaction/components/my-transaction.component.html
+++ b/src/app/app/my-transaction/components/my-transaction.component.html
@@ -1,23 +1,41 @@
 <div class="sub-main-menu">
     <div class="container-body">
         <div class="sub-main-button">
-            <div class="button-identifier" (click)="goToTargetsActuals()">Targets &amp; Actuals</div>
+            <div class="button-identifier" (click)="goToTargetsActuals()" id="targets-actuals">
+                Targets &amp; Actuals
+            </div>
         </div>
-         <div class="separator"></div>
-         <div class="sub-main-button">
-            <div class="button-identifier" (click)="goToInventory()">Inventory</div>
+
+        <div class="separator"></div>
+        
+        <div class="sub-main-button">
+            <div class="button-identifier" (click)="goToInventory()" id="inventory">
+                Inventory
+            </div>
         </div>
-         <div class="separator"></div>
-          <div class="sub-main-button">
-            <div class="button-identifier" (click)="goToRetailerRoute()">Retailer Route</div>
+        
+        <div class="separator"></div>
+        
+        <div class="sub-main-button">
+            <div class="button-identifier" (click)="goToRetailerRoute()" id="retailer-route">
+                    Retailer Route
+            </div>
         </div>
-         <div class="separator"></div>
-          <div class="sub-main-button">
-            <div class="button-identifier" (click)="goToAccountsReceivables()">Accounts Receivables</div>
+        
+        <div class="separator"></div>
+        
+        <div class="sub-main-button">
+            <div class="button-identifier" (click)="goToAccountsReceivables()" id="account-receivables">
+                Account Receivables
+            </div>
         </div>
-         <div class="separator"></div>
-         <div class="sub-main-button">
-            <div class="button-identifier" (click)="goToDSPAlerts()">DSP Alerts</div>
+        
+        <div class="separator"></div>
+        
+        <div class="sub-main-button">
+            <div class="button-identifier" (click)="goToDSPAlerts()" id="dsp-alerts">
+                DSP Alerts
+            </div>
         </div>
     </div>
 </div>
