--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -18,7 +18,7 @@
 	</div>
 
 	<div *ngIf="vDayShow" >
-		<div class="item-container-ta">
+		<div class="item-container-ta" id="ta-container">
 			<div class="item-title-ta">Broadband</div>
 				<div class="item-left">SIM</div>
 				<div class="item-mid">23.33%</div>
@@ -29,7 +29,7 @@
 				</div>
 		</div>
 		<div class="divider"></div>
-		<div class="item-container-ta">
+		<div class="item-container-ta" id="ta-container">
 				<div class="item-left">SIM</div>
 				<div class="item-mid">23.33%</div>
 				<div class="item-right">
@@ -38,7 +38,7 @@
 					<div class="balance">Balance : <div class="balace-number">200</div> </div>
 				</div>
 		</div>
-		<div class="item-container-ta">
+		<div class="item-container-ta" id="ta-container">
 			<div class="item-title-ta">Broadband</div>
 				<div class="item-left">SIM</div>
 				<div class="item-mid">23.33%</div>
@@ -48,7 +48,7 @@
 					<div class="balance">Balance : <div class="balace-number">200</div> </div>
 				</div>
 		</div>
-		<div class="item-container-ta">
+		<div class="item-container-ta" id="ta-container">
 			<div class="item-title-ta">SIM</div>
 				<div class="item-left">SmartSIM</div>
 				<div class="item-mid">23.33%</div>
@@ -61,7 +61,7 @@
 	</div>
 
 	<div *ngIf="vWeekShow">
-		<div class="item-container-ta">
+		<div class="item-container-ta" id="ta-container">
 			<div class="item-title-ta">Airtime2</div>
 			<div class="item-body">
 				<div class="item-left">Submenu</div>
@@ -76,7 +76,7 @@
 	</div>
 
 	<div *ngIf="vMonthShow">
-		<div class="item-container-ta">
+		<div class="item-container-ta" id="ta-container">
 			<div class="item-title-ta">Airtime3</div>
 			<div class="item-body">
 				<div class="item-left">Submenu</div>
